<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.rabigol.wowmoney.fragments.LoginFragment"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/listview_header"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_username"
            android:textColorHint="#FFFFFF"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:selectAllOnFocus="false" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_password"
            android:textColorHint="#FFFFFF"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/login_button"
            android:elevation="5dp"
            android:background="@color/Buttons"
            android:textColor="@android:color/white"
            android:capitalize="none"
            tools:text="Login"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_add_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="79dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/login_add_account" />


</RelativeLayout>
